--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Lari dari Sergapan AI! 🤖🏃‍♂️</h1>
+  <h1>Maze Game AI! 🤖</h1>
   <p>Ambil semua ⭐ dan hindari musuh!</p>
   <div id="game"></div>
   <p id="status">Waktu: 0s | Skor: 0</p>
