--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Lari dari Sergapan AI!</title>
+  <title>Lariii Selamatkan Diriii!!</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
